--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,7 +4,7 @@ on:
     branches: [ "main" ]
 jobs:
   job1:
-    runs-on: ubuntu-latest
+    runs-on: my-server
     steps:
       - uses: actions/checkout@v3
 
